--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -41,7 +41,7 @@ button:hover {
 }
 
 #workspaces button.focused {
-  background-color: @overlay0;
+  background-color: @surface1;
   box-shadow: inset 0 -3px @subtext0;
 }
 
