--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -62,9 +62,9 @@ button:hover {
   border-radius: 1em;
 }
 
-.modules-right .text-button {
+.modules-right label {
   color: inherit;
-  padding: 0.2em 0.5em;
+  padding: 0.2em 0.3em;
 
   /* disable gtk button hover effect */
   -gtk-icon-effect: none;
@@ -72,63 +72,63 @@ button:hover {
   text-shadow: none;
 }
 
-.modules-right > :nth-child(1) button {
+.modules-right > :nth-child(1) {
   color: @maroon;
 }
 .modules-right > :nth-child(1) button:hover {
   box-shadow: inset 0 -3px @maroon;
 }
 
-.modules-right > :nth-child(2) button {
+.modules-right > :nth-child(2) {
   color: @peach;
 }
 .modules-right > :nth-child(2) button:hover {
   box-shadow: inset 0 -3px @peach;
 }
 
-.modules-right > :nth-child(3) button {
+.modules-right > :nth-child(3) {
   color: @yellow;
 }
 .modules-right > :nth-child(3) button:hover {
   box-shadow: inset 0 -3px @yellow;
 }
 
-.modules-right > :nth-child(4) button {
+.modules-right > :nth-child(4) {
   color: @green;
 }
 .modules-right > :nth-child(4) button:hover {
   box-shadow: inset 0 -3px @green;
 }
 
-.modules-right > :nth-child(5) button {
+.modules-right > :nth-child(5) {
   color: @teal;
 }
 .modules-right > :nth-child(5) button:hover {
   box-shadow: inset 0 -3px @teal;
 }
 
-.modules-right > :nth-child(6) button {
+.modules-right > :nth-child(6) {
   color: @sky;
 }
 .modules-right > :nth-child(6) button:hover {
   box-shadow: inset 0 -3px @sky;
 }
 
-.modules-right > :nth-child(7) button {
+.modules-right > :nth-child(7) {
   color: @sapphire;
 }
 .modules-right > :nth-child(7) button:hover {
   box-shadow: inset 0 -3px @sapphire;
 }
 
-.modules-right > :nth-child(8) button {
+.modules-right > :nth-child(8) {
   color: @lavender;
 }
 .modules-right > :nth-child(8) button:hover {
   box-shadow: inset 0 -3px @lavender;
 }
 
-.modules-right > :nth-child(9) button {
+.modules-right > :nth-child(9) {
   color: @blue;
 }
 .modules-right > :nth-child(9) button:hover {
