--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -40,6 +40,9 @@ button:hover {
   background-color: transparent;
   color: @text;
 }
+#workspaces button.active {
+  background-color: @surface1;
+}
 #workspaces button.focused {
   background-color: @surface1;
   box-shadow: inset 0 -3px @subtext0;
