--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -50,6 +50,21 @@ button:hover {
 #workspaces button.urgent {
   background-color: @red;
 }
+#workspaces button {
+  padding: 0 5px;
+  background-color: transparent;
+  color: @text;
+}
+#workspaces button.active {
+  background-color: @surface1;
+}
+#workspaces button.focused {
+  background-color: @surface1;
+  box-shadow: inset 0 -3px @subtext0;
+}
+#workspaces button.urgent {
+  background-color: @red;
+}
 #mode {
   /* the indicator of the mode (resize, etc...) */
   background-color: @overlay0;
@@ -57,6 +72,27 @@ button:hover {
   box-shadow: inset 0 -3px @subtext0;
 }
 /* && Workspace buttons */
+
+/* || DWL tags */
+#tags button {
+  padding: 0 5px;
+  background-color: transparent;
+  color: @text;
+}
+#tags button.active {
+  background-color: @surface1;
+}
+#tags button.occupied {
+  box-shadow: inset 0 -3px @subtext0;
+}
+#tags button.focused {
+  background-color: @surface1;
+  box-shadow: inset 0 -3px @subtext0;
+}
+#tags button.urgent {
+  background-color: @red;
+}
+/* && DWL tags */
 
 .modules-right {
   margin: 0.25em 0.5em 0.25em 0;
