--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -28,6 +28,7 @@ button {
   border: none;
   border-radius: 0;
 }
+
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 button:hover {
   background: inherit;
@@ -38,32 +39,21 @@ button:hover {
 #workspaces button {
   padding: 0 5px;
   background-color: transparent;
+  /* box-shadow: inset 0 -3px @subtext0; */
   color: @text;
 }
 #workspaces button.active {
   background-color: @surface1;
 }
-#workspaces button.focused {
-  background-color: @surface1;
-  box-shadow: inset 0 -3px @subtext0;
-}
 #workspaces button.urgent {
   background-color: @red;
 }
-#workspaces button {
-  padding: 0 5px;
-  background-color: transparent;
-  color: @text;
+#workspaces button.empty {
+  /* box-shadow: inset 0 0 @subtext0; */
 }
-#workspaces button.active {
+/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
+#workspaces button:hover {
   background-color: @surface1;
-}
-#workspaces button.focused {
-  background-color: @surface1;
-  box-shadow: inset 0 -3px @subtext0;
-}
-#workspaces button.urgent {
-  background-color: @red;
 }
 #mode {
   /* the indicator of the mode (resize, etc...) */
