--- a/dot_config/gtk-4.0/gtk.css
+++ b/dot_config/gtk-4.0/gtk.css
@@ -3,19 +3,19 @@
 * Generated with Matugen
 */
 
-@define-color accent_color #85d2e8;
-@define-color accent_fg_color #001f27;
-@define-color accent_bg_color #85d2e8;
-@define-color window_bg_color #0f1416;
-@define-color window_fg_color #dee3e6;
-@define-color headerbar_bg_color #0f1416;
-@define-color headerbar_fg_color #dee3e6;
-@define-color popover_bg_color #0f1416;
-@define-color popover_fg_color #dee3e6;
-@define-color view_bg_color #0f1416;
-@define-color view_fg_color #dee3e6;
-@define-color card_bg_color #0f1416;
-@define-color card_fg_color #dee3e6;
+@define-color accent_color #69dbaf;
+@define-color accent_fg_color #002115;
+@define-color accent_bg_color #69dbaf;
+@define-color window_bg_color #091518;
+@define-color window_fg_color #d8e5e9;
+@define-color headerbar_bg_color #091518;
+@define-color headerbar_fg_color #d8e5e9;
+@define-color popover_bg_color #091518;
+@define-color popover_fg_color #d8e5e9;
+@define-color view_bg_color #091518;
+@define-color view_fg_color #d8e5e9;
+@define-color card_bg_color #091518;
+@define-color card_fg_color #d8e5e9;
 @define-color sidebar_bg_color @window_bg_color;
 @define-color sidebar_fg_color @window_fg_color;
 @define-color sidebar_border_color @window_bg_color;
