--- a/dot_config/gtk-3.0/gtk.css
+++ b/dot_config/gtk-3.0/gtk.css
@@ -3,20 +3,21 @@
 * Generated with Matugen
 */
 
-@define-color accent_color #69dbaf;
-@define-color accent_fg_color #002115;
-@define-color accent_bg_color #69dbaf;
-@define-color window_bg_color #091518;
-@define-color window_fg_color #d8e5e9;
-@define-color headerbar_bg_color #091518;
-@define-color headerbar_fg_color #d8e5e9;
-@define-color popover_bg_color #091518;
-@define-color popover_fg_color #d8e5e9;
-@define-color view_bg_color #091518;
-@define-color view_fg_color #d8e5e9;
-@define-color card_bg_color #091518;
-@define-color card_fg_color #d8e5e9;
-@define-color sidebar_bg_color @window_bg_color;
-@define-color sidebar_fg_color @window_fg_color;
+@define-color accent_color #85d2e7;
+@define-color accent_bg_color #85d2e7;
+@define-color accent_fg_color #003641;
+@define-color window_bg_color #0f1416;
+@define-color window_fg_color #dee3e6;
+@define-color headerbar_bg_color #0f1416;
+@define-color headerbar_fg_color #dee3e6;
+@define-color popover_bg_color #3f484b;
+@define-color popover_fg_color #bfc8cb;
+@define-color view_bg_color #0f1416;
+@define-color view_fg_color #dee3e6;
+@define-color card_bg_color #0f1416;
+@define-color card_fg_color #dee3e6;
+
+@define-color sidebar_bg_color #1b2022;
+@define-color sidebar_fg_color #dee3e6;
 @define-color sidebar_border_color @window_bg_color;
 @define-color sidebar_backdrop_color @window_bg_color;
